--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -10,7 +10,7 @@
     "config": {
       "SourceDir": "src",
       "DistributionDir": "build",
-      "BuildCommand": "npm run-script-build",
+      "BuildCommand": "npm run-script build",
       "StartCommand": "npm run-script start"
     }
   }
